syntax = "proto3";
package ru.otus.grpc;

option java_multiple_files = true;

message NumbersRequest{
  int32 start = 1;
  int32 end = 2;
}

message NumberResponse{
  int32 value = 1;
}

service NumbersService{
  rpc getNumbers(NumbersRequest) returns (stream NumberResponse){}
}
